IIS-4897 added AD client and RoleActiveDIrectoryGroup table

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -89,6 +89,11 @@
       "prefetchCount": 5
     }
   },
+  "activeDirectory": {
+    "domain": "LDAP://192.168.88.31",
+    "login": "iis",
+    "password": "VPkqGPv!"
+  },
   "salt": null,
   "defaultUserName": "olya",
   "defaultPassword": "hammer69"
