feat (materials): search by image
relates to: IIS-5866

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -70,6 +70,7 @@
     }
   },
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
+  "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
   "elasticSearch": {
     "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_"
@@ -85,7 +86,7 @@
     "sourceChannel": {
       "exchangeName": "materials",
       "queueName": "materials.features",
-      "routingKeys": ["processing.#.#"],
+      "routingKeys": [ "processing.#.#" ],
       "prefetchCount": 5
     }
   },
