using ldap client instead of  DirectoryService

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -91,7 +91,7 @@
     }
   },
   "activeDirectory": {
-    "domain": "LDAP://192.168.88.31",
+    "server": "192.168.88.31",
     "login": "iis",
     "password": "VPkqGPv!"
   },
