added service layer

--- a/src/Iis.Services/Iis.Services.csproj
+++ b/src/Iis.Services/Iis.Services.csproj
@@ -13,6 +13,8 @@
     <ProjectReference Include="..\Iis.DataModel\Iis.DataModel.csproj" />
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
     <ProjectReference Include="..\Iis.Services.Contracts\Iis.Services.Contracts.csproj" />
+    <ProjectReference Include="..\IIS.Repository\IIS.Repository.csproj" />
+    <ProjectReference Include="..\Iis.DbLayer\Iis.DbLayer.csproj" />
   </ItemGroup>
 
 </Project>
