feat: upload docx files
relates to: IIS-5897

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -97,5 +97,8 @@
   },
   "salt": null,
   "defaultUserName": "olya",
-  "defaultPassword": "hammer69"
+  "defaultPassword": "hammer69",
+  "upload": {
+    "docxDirectory": "D:\\!Work\\SchemaStorage\\contour.doc"
+  }
 }
