we can manage CORS using disableCORS config parameter

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -97,5 +97,6 @@
   },
   "salt": null,
   "defaultUserName": "olya",
-  "defaultPassword": "hammer69"
+  "defaultPassword": "hammer69",
+  "disableCORS": false
 }
