--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -39,6 +39,9 @@
     "Endpoints": {
       "Http": {
         "Url": "http://*:5000"
+      },
+      "Https":{
+        "Url":"https://*:5443"
       }
     }
   },
