added switcher for https redirect

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -101,5 +101,6 @@
   "salt": null,
   "defaultUserName": "olya",
   "defaultPassword": "hammer69",
-  "disableCORS": false
+  "disableCORS": false,
+  "useHttpsRedirection": false
 }
