removed https stuff

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -39,9 +39,6 @@
     "Endpoints": {
       "Http": {
         "Url": "http://*:5000"
-      },
-      "Https":{
-        "Url":"https://*:5443"
       }
     }
   },
@@ -101,6 +98,5 @@
   "salt": null,
   "defaultUserName": "olya",
   "defaultPassword": "hammer69",
-  "disableCORS": false,
-  "useHttpsRedirection": false
+  "disableCORS": false
 }
