--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@ stages:
   - build
   - test
   - deploy
+  - build_docker
+  - push_docker
 
 build_job:
   stage: build
@@ -148,3 +150,59 @@ deploy_contour_demo:
     name: demo_contour
     url: http://demo.contour.net
   when: manual
+
+
+
+### Docker ###
+variables:
+  DOCKER_REGISTRY: "docker.contour.net:5000"
+  DOCKER_IMAGE_NAME: "iis-core"
+
+
+build_docker:
+  stage: build_docker
+  script:
+    - docker build -t $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA .
+    - docker push $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
+  tags:
+    - docker
+
+push docker(master):
+  variables:
+    GIT_STRATEGY: none
+  stage: push_docker
+  only:
+    - master
+  script:
+    - docker pull $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
+    - docker tag $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:master
+    - docker push $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:master
+  tags:
+    - docker
+
+push docker(latest):
+  variables:
+    GIT_STRATEGY: none
+  stage: push_docker
+  only:
+    - develop
+  script:
+    - docker pull $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
+    - docker tag $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:latest
+    - docker push $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:latest
+  tags:
+    - docker
+
+
+push docker(tag):
+  variables:
+    GIT_STRATEGY: none
+  stage: push_docker
+  only:
+    - tags
+  script:
+    - docker pull $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
+    - docker tag $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_REF_NAME
+    - docker push $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_REF_NAME
+  tags:
+    - docker
