feat(ontology): migration
Related to IIS-5059

--- a/src/Iis.UnitTests/Iis.UnitTests.csproj
+++ b/src/Iis.UnitTests/Iis.UnitTests.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <Folder Include="Iis.Ontology.OntologyEnum\" />
+    <Folder Include="Iis.OntologyData\" />
   </ItemGroup>
 
 </Project>
