--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -44,8 +44,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
-    "db": "Server=dev-db.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
+    "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
   "map": {
@@ -73,8 +72,7 @@
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
   "elasticSearch": {
-    //"Uri": "http://localhost:9200",
-    "Uri": "http://dev-es.contour.net:9200",
+    "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_"
   },
   "reportsAvailable": "true",
