use bult insert for recreatin index

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -44,7 +44,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
+    //"db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
+    "db": "Server=qa-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
+    //"db": "Server=dev-db.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
   "map": {
@@ -72,6 +74,8 @@
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
   "elasticSearch": {
+    //"Uri": "http://dev-es.contour.net:9200",
+    //"Uri": "http://qa-es-01.contour.net:9200",
     "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_"
   },
