Iis 5663 save flightradar data

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -45,6 +45,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
+    "db-flightradar": "Server=air-01.contour.net;Database=flights;Username=postgres;Password=S1mpl3xTLS2709",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
   "map": {
