refactor: extract node has property with value

--- a/src/Iis.OntologyData/Iis.OntologyData.csproj
+++ b/src/Iis.OntologyData/Iis.OntologyData.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Iis.UnitTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
