--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -86,8 +86,8 @@
   "featureHandler": {
     "sourceChannel": {
       "exchangeName": "materials",
-      "queueName": "materials.features",
-      "routingKeys": [ "processing.#.#" ],
+      "queueName": "materials.processing.features",
+      "routingKeys": [ "processing.features.#" ],
       "prefetchCount": 5
     }
   },
