--- a/src/Iis.ApiTests/AcceptanceTests.csproj
+++ b/src/Iis.ApiTests/AcceptanceTests.csproj
@@ -20,6 +20,10 @@
   <RuntimeIdentifier>win-x64</RuntimeIdentifier>
 </PropertyGroup>
 
+<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+  <PlatformTarget>AnyCPU</PlatformTarget>
+</PropertyGroup>
+
   <ItemGroup>
     <None Remove="chromedriver.exe" />
   </ItemGroup>
@@ -28,13 +32,14 @@
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="GraphQL.Client" Version="3.1.0" />
     <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="84.0.4147.3001" />
-    <PackageReference Include="SpecFlow" Version="3.1.97" />
-    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.1.97" />
-    <PackageReference Include="SpecFlow.xUnit" Version="3.1.97" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="85.0.4183.8700" />
+    <PackageReference Include="SpecFlow" Version="3.4.14" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.4.14" />
+    <PackageReference Include="SpecFlow.xUnit" Version="3.4.14" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -42,6 +47,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Iis.Api\Iis.Api.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="C:\Users\user\.nuget\packages\specflow.xunit\3.1.97\build\\..\lib\netstandard2.0\TechTalk.SpecFlow.xUnit.SpecFlowPlugin.dll" Link="Main\Helpers\TechTalk.SpecFlow.xUnit.SpecFlowPlugin.dll" />
+    <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.reporters.netcoreapp10.dll" Link="Main\Helpers\xunit.runner.reporters.netcoreapp10.dll" />
+    <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.utility.netcoreapp10.dll" Link="Main\Helpers\xunit.runner.utility.netcoreapp10.dll" />
+    <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.visualstudio.dotnetcore.testadapter.dll" Link="Main\Helpers\xunit.runner.visualstudio.dotnetcore.testadapter.dll" />
   </ItemGroup>
 
 </Project>
