refactor(ontology): remove obsolete files

--- a/src/Iis.UnitTests/Iis.UnitTests.csproj
+++ b/src/Iis.UnitTests/Iis.UnitTests.csproj
@@ -36,6 +36,7 @@
 
   <ItemGroup>
     <Folder Include="Iis.Ontology.OntologyEnum\" />
+    <Folder Include="Iis.OntologyModelWrapper\" />
     <Folder Include="OntologyService\" />
   </ItemGroup>
 
