--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -17,5 +17,5 @@
     "od_dev": "Server=dev-db.odysseus.lcl;Database=od_dev;Username=postgres;Password=S1mpl3xTLS2709",
     "demo": "Server=demo-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709;"
   },
-  "DefaultSchemaStorage": "C:\\iis-api.net\\src"
+  "DefaultSchemaStorage": "D:\\!Work\\iis-api.net\\src"
 }
