--- a/src/Iis.DbLayer/Iis.DbLayer.csproj
+++ b/src/Iis.DbLayer/Iis.DbLayer.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>Iis.UnitTests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 </Project>
