--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,6 +157,8 @@ deploy_contour_demo:
 variables:
   DOCKER_REGISTRY: "docker.contour.net:5000"
   DOCKER_IMAGE_NAME: "iis-core"
+  NOMAD_REPO: "git@git.warfare-tec.com:IIS/nomad.git"
+  NOMAD_ADDR: "http://iis-dev-srv1.contour.net:4646"
 
 
 build_docker:
@@ -206,3 +208,20 @@ push docker(tag):
     - docker push $DOCKER_REGISTRY/$DOCKER_IMAGE_NAME:$CI_COMMIT_REF_NAME
   tags:
     - docker
+
+deploy_dev3_nomad:
+  variables:
+    GIT_STRATEGY: none
+  stage: deploy_nomad
+  script:
+    - mkdir deploy_$CI_COMMIT_SHORT_SHA
+    - cd deploy_$CI_COMMIT_SHORT_SHA
+    - git init .
+    - git remote add origin $NOMAD_REPO
+    - git pull origin master
+    - sed -i s/$DOCKER_IMAGE_NAME:master/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA/g iis-dev/dev3/iis_core.hcl
+    - nomad plan iis-dev/dev3/iis_core.hcl || if [ $? -eq 255 ]; then exit 255; else echo "success"; fi
+    - nomad run iis-dev/dev3/iis_core.hcl
+  tags:
+    - nomad
+  when: manual
