--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - deploy
   - build_docker
   - push_docker
+  - deploy_nomad
 
 build_job:
   stage: build
@@ -159,6 +160,7 @@ variables:
   DOCKER_IMAGE_NAME: "iis-core"
   NOMAD_REPO: "git@git.warfare-tec.com:IIS/nomad.git"
   NOMAD_ADDR: "http://iis-dev-srv1.contour.net:4646"
+  NOMAD_JOB: "iis_core.hcl"
 
 
 build_docker:
@@ -219,9 +221,9 @@ deploy_dev3_nomad:
     - git init .
     - git remote add origin $NOMAD_REPO
     - git pull origin master
-    - sed -i s/$DOCKER_IMAGE_NAME:master/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA/g iis-dev/dev3/iis_core.hcl
-    - nomad plan iis-dev/dev3/iis_core.hcl || if [ $? -eq 255 ]; then exit 255; else echo "success"; fi
-    - nomad run iis-dev/dev3/iis_core.hcl
+    - sed -i s/$DOCKER_IMAGE_NAME:master/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA/g iis-dev/dev3/$NOMAD_JOB
+    - nomad plan iis-dev/dev3/$NOMAD_JOB || if [ $? -eq 255 ]; then exit 255; else echo "success"; fi
+    - nomad run iis-dev/dev3/$NOMAD_JOB
   tags:
     - nomad
   when: manual
