--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -15,7 +15,8 @@
     "stage": "Server=stage-db.contour.net;Database=contour_prod;Username=postgres;Password=S1mpl3xTLS2709",
     "poglyad_stage": "Server=10.10.20.37;Database=pogliad;Username=postgres;Password=S1mpl3xTLS2709",
     "od_dev": "Server=dev-db.odysseus.lcl;Database=od_dev;Username=postgres;Password=S1mpl3xTLS2709",
-    "demo": "Server=demo-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709;"
+    "demo": "Server=demo-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709;",
+    "local_poglyad_prod": "Server=localhost;Database=poglyad_prod;Username=postgres;Password=123",
   },
   "DefaultSchemaStorage":  "c:\\work\\!!!\\SchemaStorage"
 }
