Refactor of EventsPage and renaming of the test project file

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ msbuild.wrn
 data_storage/
 /src/Iis.Api/Logs/*
 src/packages/*
+src/Iis.ApiTests/mono_crash*.json
+src/Iis.AcceptanceTests/mono_crash*.json
