IIS-6731 + small changes in project structure

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ data_storage/
 src/packages/*
 src/Iis.ApiTests/mono_crash*.json
 src/Iis.AcceptanceTests/mono_crash*.json
+src/Iis.AcceptanceTests/mono_crash.mem*
