--- a/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
+++ b/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="SpecFlow" Version="3.4.14" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.4.14" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.4.14" />
+    <PackageReference Include="JunitXml.TestLogger" Version="2.1.32" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
