feat: add fields for undread theme items
relates to: IIS-6746

--- a/src/Iis.ThemeManagement/Iis.ThemeManagement.csproj
+++ b/src/Iis.ThemeManagement/Iis.ThemeManagement.csproj
@@ -10,9 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Iis.DbLayer\Iis.DbLayer.csproj" />
     <ProjectReference Include="..\Iis.Domain\Iis.Domain.csproj" />
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
     <ProjectReference Include="..\Iis.DataModel\Iis.DataModel.csproj" />
+    <ProjectReference Include="..\IIS.Repository\IIS.Repository.csproj" />
   </ItemGroup>
 
 </Project>
