feat: debounce theme background counter

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -80,6 +80,7 @@
   "maxMaterialsPerOperator": {
     "value": 10
   },
+  "themesRefreshInterval": 120,
   "operatorAssigner": {
     "queueName": "assign-operator"
   },
