--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,12 +95,12 @@ unit_test:
     url: http://od-dev.contour.net
 
 
-deploy_contour_dev_auto:
-  extends: .deploy_contour_dev
-  only:
-    - /^Release_*/
-    - master
-    - develop
+#deploy_contour_dev_auto:
+#  extends: .deploy_contour_dev
+#  only:
+#    - /^Release_*/
+#    - master
+#    - develop
 
 #deploy_od_dev:
 #  extends: .deploy_od_dev
