Total Field limit could be set from appsetting.json

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -74,7 +74,8 @@
   "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
   "elasticSearch": {
     "Uri": "http://localhost:9200",
-    "IndexPreffix": "ont_"
+    "IndexPreffix": "ont_",
+    "totalFieldsLimit": 4096
   },
   "reportsAvailable": "true",
   "maxMaterialsPerOperator": {
