Renamed themesRefreshInterval -> themesRefreshIntervalInSeconds

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -80,7 +80,7 @@
   "maxMaterialsPerOperator": {
     "value": 10
   },
-  "themesRefreshInterval": 120,
+  "themesRefreshIntervalInSeconds": 120,
   "operatorAssigner": {
     "queueName": "assign-operator"
   },
