--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ src/Iis.ApiTests/mono_crash*.json
 src/Iis.AcceptanceTests/mono_crash*.json
 src/Iis.AcceptanceTests/mono_crash.mem*
 AcceptanceTests-test-result.xml
+
+*.feature.cs
