--- a/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
+++ b/src/Iis.AcceptanceTests/Iis.AcceptanceTests.csproj
@@ -56,6 +56,9 @@
     <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.reporters.netcoreapp10.dll" Link="Main\Helpers\xunit.runner.reporters.netcoreapp10.dll" />
     <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.utility.netcoreapp10.dll" Link="Main\Helpers\xunit.runner.utility.netcoreapp10.dll" />
     <None Update="C:\Users\user\.nuget\packages\xunit.runner.visualstudio\2.4.1\build\netcoreapp1.0\xunit.runner.visualstudio.dotnetcore.testadapter.dll" Link="Main\Helpers\xunit.runner.visualstudio.dotnetcore.testadapter.dll" />
+    <None Update="targetEnvironmentConfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
