--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -7,14 +7,37 @@
     "**/obj",
     "**/platforms"
   ],
-  "ConnectionStrings": {
-    "dev": "Server=dev-db.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
-    "dev2": "Server=dev2-db.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
-    "qa": "Server=qa-db-01.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
-    "local": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
-    "stage": "Server=stage-db.contour.net;Database=contour_prod;Username=postgres;Password=S1mpl3xTLS2709",
-    "poglyad_stage": "Server=10.10.20.37;Database=pogliad;Username=postgres;Password=S1mpl3xTLS2709",
-    "od_dev": "Server=dev-db.odysseus.lcl;Database=od_dev;Username=postgres;Password=S1mpl3xTLS2709",
+  "environmentProperties": {
+    "dev": {
+      "sortOrder": 1,
+      "connectionString": "Server=192.168.88.244;Port=26601;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://dev-api.contour.net:5000/"
+    },
+    "dev2": {
+      "sortOrder": 4,
+      "connectionString": "Server=192.168.88.50;Port=29024;Database=contour;Username=postgres;Password=S1mpl3xTLS2709",
+      "apiUri": "http://dev2-api.contour.net:5000/"
+    },
+    "dev3": {
+      "sortOrder": 5,
+      "connectionString": "Server=192.168.88.50;Port=30130;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://dev3-api.contour.net:5000/"
+    },
+    "qa": {
+      "sortOrder": 2,
+      "connectionString": "Server=192.168.88.244;Port=29661;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://qa-api.contour.net:5000/"
+    },
+    "demo": {
+      "sortOrder": 3,
+      "connectionString": "Server=192.168.88.93;Port=31002;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://demo-api.contour.net:5000/"
+    },
+    "local": {
+      "sortOrder": 6,
+      "connectionString": "Server=localhost;Port=5432;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://localhost:5000/"
+    }
   },
-  "DefaultSchemaStorage": "C:\\iis-api.net\\src"
+  "DefaultSchemaStorage": "C:\\Users\\Default\\Documents"
 }
