[IIS-6950] [BE] Форма поиска/просмотра по guid -> added request wrapper + form initialization

--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -11,30 +11,30 @@
     "dev": {
       "sortOrder": 1,
       "connectionString": "Server=192.168.88.244;Port=26601;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://dev-api.contour.net:5000/"
+      "apiUri": "http://192.168.88.244:28348/"
     },
     "dev2": {
       "sortOrder": 4,
       "connectionString": "Server=192.168.88.50;Port=29024;Database=contour;Username=postgres;Password=S1mpl3xTLS2709",
-      "apiUri": "http://dev2-api.contour.net:5000/"
+      "apiUri": "http://192.168.88.50:27521/"
     },
     "dev3": {
       "sortOrder": 5,
       "connectionString": "Server=192.168.88.50;Port=30130;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://dev3-api.contour.net:5000/"
+      "apiUri": "http://192.168.88.244:22679/"
     },
     "qa": {
       "sortOrder": 2,
       "connectionString": "Server=192.168.88.244;Port=29661;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://qa-api.contour.net:5000/"
+      "apiUri": "http://192.168.88.244:31584/"
     },
     "demo": {
       "sortOrder": 3,
       "connectionString": "Server=192.168.88.93;Port=31002;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://demo-api.contour.net:5000/"
+      "apiUri": "http://192.168.88.93:22739/"
     },
     "local": {
-      "sortOrder": 6,
+      "sortOrder": 0,
       "connectionString": "Server=localhost;Port=5432;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
       "apiUri": "http://localhost:5000/"
     }
