--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -11,32 +11,38 @@
     "dev": {
       "sortOrder": 1,
       "connectionString": "Server=192.168.88.244;Port=26601;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://192.168.88.244:28348/"
+      "apiUri": "http://192.168.88.244:28348/",
+      "appUri": "dev.contour.net"
     },
     "dev2": {
       "sortOrder": 4,
       "connectionString": "Server=192.168.88.50;Port=29024;Database=contour;Username=postgres;Password=S1mpl3xTLS2709",
-      "apiUri": "http://192.168.88.50:27521/"
+      "apiUri": "http://192.168.88.50:27521/",
+      "appUri": "dev2.contour.net"
     },
     "dev3": {
       "sortOrder": 5,
       "connectionString": "Server=192.168.88.50;Port=30130;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://192.168.88.244:22679/"
+      "apiUri": "http://192.168.88.244:22679/",
+      "appUri": "dev3.contour.net"
     },
     "qa": {
       "sortOrder": 2,
       "connectionString": "Server=192.168.88.244;Port=29661;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://192.168.88.244:31584/"
+      "apiUri": "http://192.168.88.244:31584/",
+      "appUri": "qa.contour.net"
     },
     "demo": {
       "sortOrder": 3,
       "connectionString": "Server=192.168.88.93;Port=31002;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://192.168.88.93:22739/"
+      "apiUri": "http://192.168.88.93:22739/",
+      "appUri": "demo.contour.net"
     },
     "local": {
       "sortOrder": 0,
       "connectionString": "Server=localhost;Port=5432;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://localhost:5000/"
+      "apiUri": "http://localhost:5000/",
+      "appUri": "localhost"
     }
   },
   "DefaultSchemaStorage": "C:\\Users\\Default\\Documents"
