[IIS-6950] [BE] Форма поиска/просмотра по guid -> added Basic Auth

--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -45,5 +45,9 @@
       "appUri": "localhost"
     }
   },
-  "DefaultSchemaStorage": "C:\\Users\\Default\\Documents"
+  "DefaultSchemaStorage": "C:\\Users\\Default\\Documents",
+  "userCredentials": {
+    "userName": "olya",
+    "password": "hammer69"
+  }
 }
