fix: include bePartOf
relates to: IIS-7021

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -83,7 +83,10 @@
   },
   "themesRefreshIntervalInSeconds": 120,
   "operatorAssigner": {
-    "queueName": "assign-operator"
+    "queueName": "materials.assign.operator"
+  },
+  "elasticSaver": {
+    "queueName": "materials.save.elastic"
   },
   "featureHandler": {
     "sourceChannel": {
