added logic for extract tower location from gsm

--- a/src/Iis.DataModel/Iis.DataModel.csproj
+++ b/src/Iis.DataModel/Iis.DataModel.csproj
@@ -19,6 +19,9 @@
     <Compile Remove="Migrations\20200917101642_AddFlightRadarHistory.Designer.cs" />
     <Compile Remove="Migrations\20201013101322_AddedQueryResults.cs" />
     <Compile Remove="Migrations\20201013101322_AddedQueryResults.Designer.cs" />
+    <Compile Update="Migrations\20201230000821_ChangeHistory_ParentTypeName.Designer.cs">
+      <DependentUpon>20201230000821_ChangeHistory_ParentTypeName.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
