add possibility upload pdf files

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -106,6 +106,7 @@
   "defaultPassword": "hammer69",
   "disableCORS": false,
   "upload": {
-    "docxDirectory": "D:\\!Work\\SchemaStorage\\contour.doc"
+    "docxDirectory": "D:\\!Work\\SchemaStorage\\contour.doc",
+    "pdfDirectory": "D:\\!Work\\SchemaStorage\\cybint.data.file"
   }
 }
