OM - настройки request timeout при перестройке индекса

--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -49,5 +49,8 @@
   "userCredentials": {
     "userName": "",
     "password": ""
+  },
+  "requestSettings": {
+    "reIndexTimeOutInMins": 25 
   }
 }
