--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -45,7 +45,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
-    "db-flightradar": "Server=air-01.contour.net;Database=flights;Username=postgres;Password=S1mpl3xTLS2709",
+    "db-flightradar": "Server=localhost;Database=air-backup;Username=postgres;Password=su",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
   "map": {
@@ -108,5 +108,10 @@
   "upload": {
     "docxDirectory": "D:\\!Work\\SchemaStorage\\contour.doc",
     "pdfDirectory": "D:\\!Work\\SchemaStorage\\cybint.data.file"
+  },
+  "flightRadarDataReader": {
+    "dataFolder": "D:\\!Work\\data-collector\\export\\aircrafts",
+    "processedFolder": "D:\\!Work\\data-collector\\export\\processed",
+    "errorFolder": "D:\\!Work\\data-collector\\export\\error"
   }
 }
