--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -8,61 +8,49 @@
     "**/platforms"
   ],
   "environmentProperties": {
-    //"dev": {
-    //  "sortOrder": 1,
-    //  "connectionString": "Server=192.168.88.244;Port=26601;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-    //  "apiUri": "http://192.168.88.244:28348/",
-    //  "appUri": "dev.contour.net"
-    //},
-    //"dev2": {
-    //  "sortOrder": 4,
-    //  "connectionString": "Server=192.168.88.50;Port=29024;Database=contour;Username=postgres;Password=S1mpl3xTLS2709",
-    //  "apiUri": "http://192.168.88.50:27521/",
-    //  "appUri": "dev2.contour.net"
-    //},
-    //"dev3": {
-    //  "sortOrder": 5,
-    //  "connectionString": "Server=192.168.88.50;Port=30130;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-    //  "apiUri": "http://192.168.88.244:22679/",
-    //  "appUri": "dev3.contour.net"
-    //},
+    "dev": {
+      "sortOrder": 1,
+      "connectionString": "Server=192.168.88.244;Port=26601;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://192.168.88.244:28348",
+      "appUri": "http://dev.contour.net"
+    },
+    "dev2": {
+      "sortOrder": 4,
+      "connectionString": "Server=192.168.88.50;Port=29024;Database=contour;Username=postgres;Password=S1mpl3xTLS2709",
+      "apiUri": "http://192.168.88.50:27521",
+      "appUri": "http://dev2.contour.net"
+    },
+    "dev3": {
+      "sortOrder": 5,
+      "connectionString": "Server=192.168.88.50;Port=30130;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://192.168.88.244:22679",
+      "appUri": "http://dev3.contour.net"
+    },
     "qa": {
       "sortOrder": 2,
-      "connectionString": "Server=192.168.88.244;Port=23442;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://192.168.88.244:31584/",
-      "appUri": "qa.contour.net"
+      "connectionString": "Server=192.168.88.244;Port=29661;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://192.168.88.244:31584",
+      "appUri": "http://qa.contour.net"
     },
     "demo": {
       "sortOrder": 3,
-      "connectionString": "Server=192.168.88.93;Port=31889;Database=contour;Username=postgres;Password=S1mpl3xTLS2709",
-      "apiUri": "http://192.168.88.93:22739/",
-      "appUri": "demo.contour.net"
+      "connectionString": "Server=192.168.88.93;Port=31002;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://192.168.88.93:22739",
+      "appUri": "http://demo.contour.net"
     },
-    //"local-contour": {
-    //  "sortOrder": 0,
-    //  "connectionString": "Server=localhost;Port=5432;Database=contour_dev_net;Username=postgres;Password=123;",
-    //  "apiUri": "http://localhost:5000/",
-    //  "appUri": "localhost"
-    //},
-    "stage": {
+    "local": {
       "sortOrder": 0,
-      "connectionString": "Server=stage-db.contour.net;Database=contour_prod;Username=postgres;Password=S1mpl3xTLS2709;",
-      "apiUri": "http://localhost:5000/",
-      "appUri": "localhost"
-    },
-    "local-qa": {
-      "sortOrder": 0,
-      "connectionString": "Server=localhost;Port=5432;Database=qa;Username=postgres;Password=123;",
-      "apiUri": "http://localhost:5000/",
-      "appUri": "localhost"
+      "connectionString": "Server=localhost;Port=5432;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
+      "apiUri": "http://localhost:5000",
+      "appUri": "http://localhost:3000"
     }
   },
-  "DefaultSchemaStorage": "C:\\iis-api.net\\src",
+  "DefaultSchemaStorage": "C:\\Users\\Default\\Documents",
   "userCredentials": {
-    "userName": "olya",
-    "password": "hammer69"
+    "userName": "",
+    "password": ""
   },
   "requestSettings": {
-    "reIndexTimeOutInMins": 25
+    "reIndexTimeOutInMins": 25 
   }
 }
