added MaterialLoader host

--- a/src/Iis.MaterialLoader/appsettings.json
+++ b/src/Iis.MaterialLoader/appsettings.json
@@ -6,5 +6,15 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123"
+  },
+  "files": {
+    "storage": "Database",
+    "path": "/root/storage"
+  },
+  "mq": {
+    "hostName": "localhost"
+  }
 }
