--- a/src/Iis.MaterialLoader/Iis.MaterialLoader.csproj
+++ b/src/Iis.MaterialLoader/Iis.MaterialLoader.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
     </ItemGroup>
@@ -14,6 +15,7 @@
       <ProjectReference Include="..\Iis.Domain\Iis.Domain.csproj" />
       <ProjectReference Include="..\Iis.Messages\Iis.Messages.csproj" />
       <ProjectReference Include="..\IIS.Repository\IIS.Repository.csproj" />
+      <ProjectReference Include="..\Iis.Services\Iis.Services.csproj" />
     </ItemGroup>
 
 
