--- a/src/Iis.MaterialLoader/Properties/launchSettings.json
+++ b/src/Iis.MaterialLoader/Properties/launchSettings.json
@@ -19,9 +19,7 @@
     },
     "Iis.MaterialLoader": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:41511",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
