--- a/src/Iis.MaterialLoader/appsettings.json
+++ b/src/Iis.MaterialLoader/appsettings.json
@@ -1,17 +1,46 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{CorrelationId}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "fileSizeLimitBytes": 104857600,
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{CorrelationId}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithThreadId",
+      "WithCorrelationId"
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123"
   },
   "files": {
-    "storage": "Database",
+    "storage": "Folder",
     "path": "/root/storage"
   },
   "mq": {
