--- a/Dockerfile.material-loader
+++ b/Dockerfile.material-loader
@@ -8,7 +8,7 @@ COPY . /opt/material-loader/
 
 RUN dotnet publish src/Iis.MaterialLoader/Iis.MaterialLoader.csproj -c Release -o publish/material-loader
 
-FROM mcr.microsoft.com/dotnet/material-loader/aspnet:3.1
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /opt/material-loader
 COPY --from=build /opt/material-loader/publish/material-loader/ /opt/material-loader/
 RUN rm -f /opt/material-loader/appsettings.Production.json && ln -s /local/appsettings.json /opt/material-loader/appsettings.Production.json
