--- a/src/Iis.MaterialLoader/appsettings.json
+++ b/src/Iis.MaterialLoader/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5123"
+      }
+    }
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
