--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -40,17 +40,17 @@
     },
     "local": {
       "sortOrder": 0,
-      "connectionString": "Server=localhost;Port=5432;Database=qa;Username=postgres;Password=123;",
+      "connectionString": "Server=localhost;Port=5432;Database=contour;Username=postgres;Password=S1mpl3xTLS2709;",
       "apiUri": "http://localhost:5000",
       "appUri": "http://localhost:3000"
     }
   },
-  "DefaultSchemaStorage": "C:\\iis-api.net\\src",
+  "DefaultSchemaStorage": "C:\\Users\\Default\\Documents",
   "userCredentials": {
-    "userName": "olya",
-    "password": "123"
+    "userName": "",
+    "password": ""
   },
   "requestSettings": {
-    "reIndexTimeOutInMins": 25
+    "reIndexTimeOutInMins": 25 
   }
 }
