feat: create role and users
relates to: IIS-7307

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -75,7 +75,9 @@
   "elasticSearch": {
     "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_",
-    "totalFieldsLimit": 4096
+    "totalFieldsLimit": 4096,
+    "DefaultLogin": "elastic",
+    "DefaultPassword": "112233"
   },
   "reportsAvailable": "true",
   "maxMaterialsPerOperator": {
