feat: create role and users
relates to: IIS-7307

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -77,7 +77,8 @@
     "IndexPreffix": "ont_",
     "totalFieldsLimit": 4096,
     "DefaultLogin": "elastic",
-    "DefaultPassword": "112233"
+    "DefaultPassword": "112233",
+    "ScrollDurationMinutes": 2
   },
   "reportsAvailable": "true",
   "maxMaterialsPerOperator": {
