added sub aggregations model

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -74,8 +74,8 @@
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "imageVectorizerUrl": "http://192.168.88.185:7786/encode",
   "elasticSearch": {
-//    "Uri": "http://192.168.88.244:26336",
-    "Uri": "http://localhost:9200",
+    "Uri": "http://192.168.88.244:20683",
+//    "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_",
     "totalFieldsLimit": 4096,
     "DefaultLogin": "elastic",
